DOES_NOT_WORK/05_bind-service-statefulset--TCP_only_loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bind-service-statefulset
  labels:
    app: bind-service-statefulset
spec:
  ports:
    - port: 53
      name: dns-server-tcp
      protocol: TCP
  selector:
    app: bind-statefulset
  type: LoadBalancer
