DOES_NOT_WORK/06_bind-ingress-statefulset.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bind-ingress-statefulset
spec:
  rules:
    - :
        paths:
        - backend:
            serviceName: bind-service-statefulset
            servicePort: 53
